--- a/src/pages/company.css
+++ b/src/pages/company.css
@@ -24,6 +24,12 @@
     padding: 20px;
 }
 
+
+.organ-img{
+    width: 100%;
+    height: 600px;
+    border-radius: 10px;
+}
 .intro-text {
     font-size: 70px;
     font-weight: 80;
@@ -104,12 +110,20 @@ hr {
 h3 {
     color: #32A542;
 }
-
+.management-title {
+    padding-top: 100px;
+    font-size: 50px;
+    text-align: center;
+}
 @media (max-width: 1024px) {
     .company-intro {
         padding: 50px;
     }
     
+    .organ-img{
+        width: 100%;
+        height: 500px;
+    }
     .intro-text {
         font-size: 50px;
     }
