--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,8 +5,14 @@ nav {
   padding-right: 50px;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid black;
   position: relative;
+  height: 80px;
+  background-color: white;
+}
+
+img{
+  height: 60px;
+  width: 250px;
 }
 
 .right-nav {
@@ -22,6 +28,22 @@ nav {
 .nav-tab {
   color: black;
   margin: 0;
+}
+
+.nav-tab:hover {
+  color: #32A542;
+  text-decoration: none;
+}
+
+.nav-tab:active {
+  color: #32A542;
+  text-decoration: none;
+}
+
+.nav-tab.active {
+  color: #32A542;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 .hamburger {
@@ -86,7 +108,6 @@ nav {
     box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
   }
 
-
   .right-nav.mobile-menu-open {
     right: 0;
   }
@@ -102,6 +123,11 @@ nav {
     font-size: 18px;
   }
 
+  .nav-tab.active {
+    color: #32A542;
+    font-weight: bold;
+    text-decoration: none;
+  }
 
   .menu-overlay {
     display: block;
@@ -115,7 +141,6 @@ nav {
   }
 }
 
-
 @media (max-width: 480px) {
   nav {
     padding-left: 15px;
@@ -128,5 +153,11 @@ nav {
 
   .nav-tab {
     font-size: 16px;
+  }
+
+  .nav-tab.active {
+    color: #32A542;
+    font-weight: bold;
+    text-decoration: none;
   }
 }
