--- a/src/pages/company.css
+++ b/src/pages/company.css
@@ -3,7 +3,9 @@
 }
 
 .company-body{
+    margin-top: 100px;
     text-align: center;
+    
 }
 
 .firstimg {
@@ -152,6 +154,10 @@ h3 {
 }
 
 @media (max-width: 768px) {
+
+    .company-body{
+        margin-top:50px;
+    }
     .company-intro {
         flex-direction: column;
         padding: 30px 20px;
@@ -223,6 +229,10 @@ h3 {
 
 
 @media (max-width: 480px) {
+    .company-body {
+        padding: 20px;
+        margin-top: 50px;
+    }   
     .company-intro {
         padding: 20px 15px;
     }
